--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,81 @@
-build/
-*.cfg
-*.weights
-*.engine
+# This file is used to ignore files which are generated
+# ----------------------------------------------------------------------------
+
+*~
+*.autosave
+*.a
+*.core
+*.moc
+*.o
+*.obj
+*.orig
+*.rej
+*.so
+*.so.*
+*_pch.h.cpp
+*_resource.rc
+*.qm
+.#*
+*.*#
+core
+!core/
+tags
+.DS_Store
+.directory
+*.debug
+Makefile*
+*.prl
+*.app
+moc_*.cpp
+ui_*.h
+qrc_*.cpp
+Thumbs.db
+*.res
+*.rc
+/.qmake.cache
+/.qmake.stash
+
+# qtcreator generated files
+*.pro.user*
+
+# xemacs temporary files
+*.flc
+
+# Vim temporary files
+.*.swp
+
+# Visual Studio generated files
+*.ib_pdb_index
+*.idb
+*.ilk
 *.pdb
-x64/
-ipch/
-data/
+*.sln
+*.suo
+*.vcproj
+*vcproj.*.*.user
+*.ncb
 *.sdf
 *.opensdf
-*.exp
-*.jpg
-*.db
-*.ipdb
+*.vcxproj
+*vcxproj.*
+
+# MinGW generated files
+*.Debug
+*.Release
+
+# Python byte code
+*.pyc
+
+# Binaries
+# --------
 *.dll
-*.lib
-*.table
-api/
-*.iobj
-*.opendb
 *.exe
-.vs/
-.vscode/
-*.log
+
+CMakeLists.txt.user
+deprecated
+omv.config.json
+build
+models
+omvnn-models.tgz
+data
+*.jpg
